syntax = "proto3";

package raftrpc;
option go_package = "stallionraft/raftrpc";

// The greeting service definition.
service RaftRpc {
  // Sends a greeting
  rpc RequestVoteHandler (RequestVoteArgs) returns (RequestVoteReply) {}
  // Sends another greeting
  rpc HeartbeatHandler (HeartBeatArgs) returns (HeartBeatReply) {}
}

// Vote req
message RequestVoteArgs {
    int32 term = 1;
    int32 server = 2;
    int32 lastlogindex = 3;
    int32 lastlogterm = 4;
}

// Vote res
message RequestVoteReply {
  int32 term = 1;
  bool vote = 2;
}

message HeartBeatArgs {
	int32 term = 1;
	int32 id = 2;
	int32 prevlogindex = 3;
	int32 prevlogterm = 4;
	repeated LogEntry entries = 5;
	int32 leadercommit = 6;
}

message HeartBeatReply {
	int32 term = 1;
	bool success = 2;
	int32 jumpindex = 3;
}

message LogEntry {
	string command = 1;
	int32 term = 2;
}

message ApplyMsg {
	bool commandvalid = 1;
	string command = 2;
	int32 commandindex = 3;
}
